Correct page overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,9 @@ html, body {
     background-color: #fff9fb;
     background-image: url(../images/paper.png);
     font-family: 'Libre Baskerville', serif;
-    width: 100vw;
 }
+
+
 
 h1 {
     text-align: center;
@@ -24,7 +25,7 @@ h1 {
     display: flex;
     justify-content: center;
     padding: 0 1rem 0 1rem;
-    width: 100vw;
+    width: 100%;
     box-sizing: border-box;
 }
 
@@ -63,7 +64,7 @@ h1 {
 
 #library-table {
     table-layout: fixed;
-    min-width: 100vw;
+    min-width: 100%;
     border-collapse: collapse;
     margin-top: 3rem;
     margin-bottom: 4rem;
